# synfuel-control

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: __init__.py  eda.ipynb  eda.py  noise.py  sample.py  sensitivity.py
analysis/data/: doe.csv
bridge/: __init__.py  run_sil.py  virtual_esp32.py
circuits/: ANALYSIS.md  __init__.py  frontend.py  verify.py
circuits/spice/: opamp_gain.cir  rc_lowpass.cir  rtd_divider.cir  wheatstone_inamp.cir
control/: __init__.py  closed_loop.py  controller.py
edge/: CMakeLists.txt  bench.md
edge/include/: mlp.h  weights.h
edge/src/: main.cpp  mlp.cpp
firmware/: diagram.json  esp32_node.ino  wokwi.toml
pinn/: __init__.py  losses.py  model.onnx  model.py  train.py
sim/: CHEMISTRY.md  __init__.py  params.py  reactor.py  run_sim.py
tests/: test_analysis.py  test_control.py  test_edge.py  test_phase6.py  test_pinn.py  test_reactor.py
