[project]
name = "synfuel-control"
version = "0.1.0"
description = "Closed-loop control of a simulated Fischer-Tropsch synfuel reactor (PINN + edge AI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sim", "analysis"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]  # notebooks use their own style (trailing ';', etc.)

[tool.pytest.ini_options]
testpaths = ["tests"]
