cmake_minimum_required(VERSION 3.16)
project(synfuel_edge CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_executable(synfuel_edge src/main.cpp src/mlp.cpp)
target_include_directories(synfuel_edge PRIVATE include)
